プレイヤー仕様を加筆

--- a/Assets/Documents/プレイヤー仕様.md
+++ b/Assets/Documents/プレイヤー仕様.md
@@ -7,6 +7,8 @@ Unity Editor 上では"Player"
 - 移動
 - ジャンプ
 
+# UML
+
 ```plantuml
 @startuml
 class Player{
@@ -35,3 +37,25 @@ PlayerActionController "1" <-- "*" Action
 PlayerParameterManager "1" <-- "*" Parameter
 @enduml
 ```
+
+### 検証 : Player が Action, Param 以外を持つ可能性
+
+1. テクスチャ変更\
+   ダメージ、モードチェンジ etc...
+
+2. サウンド変更\
+   キャラ変、ヘリウム的ギミック、無音化 etc...
+
+```plantuml
+@startuml
+Pl1 -- Action1 : PLが1人の場合
+Pl1 -- Action2
+Pl1 -- Action3
+
+Pl11 -- Action11 : PLが複数の場合
+Pl22 -- Action22
+Pl33 -- Action33
+@enduml
+```
+
+もし PL が複数いるなら、PL と Action を紐づけする関係クラスを設けたほうがいいかもしれない
